buy-crypto.html

--- a/buy-crypto.html
+++ b/buy-crypto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crypto Exchange</title>
+    <title>UNIV Exchange</title>
     <script src="assets/tailwindcss.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
@@ -76,16 +76,16 @@
 
         // Data for cryptocurrencies
         const cryptoData = [
-            { name: 'Bitcoin', price: 35361.09, capitalization: 700000000000, change: 0.27, logo: 'https://cryptologos.cc/logos/bitcoin-btc-logo.png', available: true },
+            { name: 'Bitcoin', price: 85861.09, capitalization: 700000000000, change: 0.27, logo: 'https://cryptologos.cc/logos/bitcoin-btc-logo.png', available: true },
             { name: 'Ethereum', price: 3208.65, capitalization: 500000000000, change: 0.45, logo: 'https://cryptologos.cc/logos/ethereum-eth-logo.png', available: true },
-            { name: 'Cardano', price: 0.46, capitalization: 35000000000, change: -0.37, logo: 'https://cryptologos.cc/logos/cardano-ada-logo.png', available: true },
-            { name: 'XRP', price: 0.36, capitalization: 40000000000, change: 0.55, logo: 'https://cryptologos.cc/logos/xrp-xrp-logo.png', available: true },
-            { name: 'Solana', price: 32.78, capitalization: 30000000000, change: -0.10, logo: 'https://cryptologos.cc/logos/solana-sol-logo.png', available: true },
-            { name: 'Polkadot', price: 8.75, capitalization: 20000000000, change: 0.61, logo: 'https://cryptologos.cc/logos/polkadot-dot-logo.png', available: true },
-            { name: 'Dogecoin', price: 0.05, capitalization: 10000000000, change: 0.29, logo: 'https://cryptologos.cc/logos/dogecoin-doge-logo.png', available: true },
+            { name: 'Cardano', price: 0.66, capitalization: 35000000000, change: -0.37, logo: 'https://cryptologos.cc/logos/cardano-ada-logo.png', available: true },
+            { name: 'XRP', price: 0.68, capitalization: 40000000000, change: 0.55, logo: 'https://cryptologos.cc/logos/xrp-xrp-logo.png', available: true },
+            { name: 'Solana', price: 202.78, capitalization: 30000000000, change: -0.10, logo: 'https://cryptologos.cc/logos/solana-sol-logo.png', available: true },
+            { name: 'Polkadot', price: 78.75, capitalization: 20000000000, change: 0.61, logo: 'https://cryptologos.cc/logos/polkadot-dot-logo.png', available: true },
+            { name: 'Dogecoin', price: 0.45, capitalization: 10000000000, change: 0.29, logo: 'https://cryptologos.cc/logos/dogecoin-doge-logo.png', available: true },
             { name: 'Avalanche', price: 37.11, capitalization: 25000000000, change: 0.24, logo: 'https://cryptologos.cc/logos/avalanche-avax-logo.png', available: true },
-            { name: 'Litecoin', price: 72.78, capitalization: 10000000000, change: 0.90, logo: 'https://cryptologos.cc/logos/litecoin-ltc-logo.png', available: true },
-            { name: 'TRB', price: 16.42, capitalization: 500000000, change: -0.42, logo: 'https://cryptologos.cc/logos/tellor-trb-logo.png', available: true }
+            { name: 'Litecoin', price: 76.78, capitalization: 10000000000, change: 0.90, logo: 'https://cryptologos.cc/logos/litecoin-ltc-logo.png', available: true },
+            { name: 'TRB', price: 36.42, capitalization: 500000000, change: -0.42, logo: 'https://cryptologos.cc/logos/tellor-trb-logo.png', available: true }
         ];
 
         // Function to update the cryptocurrency list
