buying-crypto.html

--- a/buying-crypto.html
+++ b/buying-crypto.html
@@ -26,7 +26,7 @@
 
     <!-- Price Section -->
     <div class="p-4 text-center">
-        <h2 class="text-5xl font-bold">$35,361.09</h2>
+        <h2 class="text-5xl font-bold">$85,861.09</h2>
         <p class="text-green-500 text-lg font-semibold mt-2">+ $96.35 (0.27%)</p>
     </div>
 
@@ -45,10 +45,10 @@
         <h3 class="text-lg font-semibold">Details</h3>
         <div class="mt-2">
             <p class="text-gray-500">Cryptocurrency Capitalization</p>
-            <p class="text-2xl font-bold">$675,954,167,011.90</p>
+            <p class="text-2xl font-bold">$1,275,954,167,011.90</p>
         </div>
         <div class="mt-4">
-            <p class="text-gray-500">Available for purchase</p>
+            <p class="text-gray-500">Not Available for purchase</p>
             
             <p class="bg-gray-100 p-3 rounded-lg text-xl"><i class="fab fa-bitcoin text-yellow-500"></i> 19,115,761.9999 BTC</p>
         </div>
@@ -63,7 +63,7 @@
                 labels: ['06.16', '06.40', '07.05', '07.29', '07.53'],
                 datasets: [{
                     label: 'Bitcoin Price',
-                    data: [23088.38, 27886.51, 32684.63, 37482.76, 35361.09],
+                    data: [23088.38, 27886.51, 32684.63, 37482.76, 35361.09, 40421.09, 38236.12, 41232.02, 37482.76, 55289.11, 62890.65, 56300.23, 65801.76, 62890.56, 75023.40, 73018.20, 85861.25],
                     backgroundColor: 'rgba(75, 192, 192, 0.1)',
                     borderColor: '#4CAF50',
                     borderWidth: 2,
