--- a/buying.html
+++ b/buying.html
@@ -50,7 +50,7 @@
     <div class="px-4 py-2 mt-2">
         <div class="flex justify-between items-center">
             <div class="text-lg font-medium text-gray-500">Balance:</div>
-            <div class="text-2xl font-bold text-gray-900">$ 8.583.304,02</div>
+            <div class="text-2xl font-bold text-gray-900">$ 0.00</div>
         </div>
     </div>
 
@@ -62,13 +62,13 @@
                 <img src="https://via.placeholder.com/40" alt="Stock Logo" class="w-10 h-10 rounded-full">
                 <!-- Stock Info -->
                 <div>
-                    <div class="font-bold text-lg">Mykrosofft</div>
+                    <div class="font-bold text-lg">Microsoft</div>
                     <div class="text-sm text-gray-500">Available</div>
                 </div>
             </div>
             <!-- Stock Price Info -->
             <div class="text-right">
-                <div class="text-xl font-bold">$ 290,18</div>
+                <div class="text-xl font-bold">$ 490,18</div>
                 <div class="text-sm text-green-500 font-medium">+ $1,57 (0,55%)</div>
             </div>
         </div>
@@ -81,14 +81,14 @@
             <input type="number" value="1" class="input-underline">
             <button class="bg-blue-100 text-blue-600 font-bold py-1 px-3 rounded-md">Max</button>
         </div>
-        <div class="text-sm text-gray-500 mt-2">7.517.328.907 pcs. available</div>
+        <div class="text-sm text-gray-500 mt-2">7.517.328.907 pcs. not available</div>
     </div>
 
     <!-- Summary Section -->
     <div class="p-4 mt-4">
         <div class="flex justify-between">
             <div class="text-lg font-semibold text-gray-700">Summary:</div>
-            <div class="text-xl font-bold">$ 290,18</div>
+            <div class="text-xl font-bold">$ 490,18</div>
         </div>
     </div>
 
