--- a/investing.html
+++ b/investing.html
@@ -225,10 +225,10 @@
                         <img src="https://cryptologos.cc/logos/bitcoin-btc-logo.png" alt="Bitcoin" class="w-6 h-6">
                         <div>
                             <p>Bitcoin</p>
-                            <p class="text-sm text-gray-400">0.0001 BTC</p>
+                            <p class="text-sm text-gray-400">0.0000 BTC</p>
                         </div>
                     </div>
-                    <p class="text-green-500">$3.80 (+25.16%)</p>
+                    <p class="text-green-500">$0.00 (+25.16%)</p>
                 </div>
 
                 <div class="flex justify-between py-2">
@@ -236,10 +236,10 @@
                         <img src="https://cryptologos.cc/logos/ethereum-eth-logo.png" alt="Ethereum" class="w-6 h-6">
                         <div>
                             <p>Ethereum</p>
-                            <p class="text-sm text-gray-400">200.00 ETH</p>
+                            <p class="text-sm text-gray-400">0.00 ETH</p>
                         </div>
                     </div>
-                    <p class="text-red-500">$719.3k (-0.99%)</p>
+                    <p class="text-red-500">$0.00 (+3.99%)</p>
                 </div>
 
                 <div class="flex justify-between py-2">
@@ -247,10 +247,10 @@
                         <img src="https://cryptologos.cc/logos/solana-sol-logo.png" alt="Solana" class="w-6 h-6">
                         <div>
                             <p>Solana</p>
-                            <p class="text-sm text-gray-400">453.42 SOL</p>
+                            <p class="text-sm text-gray-400">0.00 SOL</p>
                         </div>
                     </div>
-                    <p class="text-red-500">$10.3k (-0.99%)</p>
+                    <p class="text-red-500">$0.00 (+5.99%)</p>
                 </div>
 
                 <div class="flex justify-between py-2">
@@ -259,10 +259,10 @@
                             class="w-6 h-6">
                         <div>
                             <p>Binance Coin</p>
-                            <p class="text-sm text-gray-400">10.75 BNB</p>
+                            <p class="text-sm text-gray-400">0.00 BNB</p>
                         </div>
                     </div>
-                    <p class="text-green-500">$3.8k (+12.47%)</p>
+                    <p class="text-green-500">$0.00 (+12.47%)</p>
                 </div>
 
                 <div class="flex justify-between py-2">
@@ -270,10 +270,10 @@
                         <img src="https://cryptologos.cc/logos/cardano-ada-logo.png" alt="Cardano" class="w-6 h-6">
                         <div>
                             <p>Cardano</p>
-                            <p class="text-sm text-gray-400">1000 ADA</p>
+                            <p class="text-sm text-gray-400">0 ADA</p>
                         </div>
                     </div>
-                    <p class="text-red-500">$400 (-2.45%)</p>
+                    <p class="text-red-500">$0.00 (+2.45%)</p>
                 </div>
 
                 <div class="flex justify-between py-2">
@@ -281,10 +281,10 @@
                         <img src="https://cryptologos.cc/logos/book-of-meme-bome-logo.png" alt="Bome" class="w-6 h-6">
                         <div>
                             <p>Book Of Meme</p>
-                            <p class="text-sm text-gray-400">500 BOME</p>
+                            <p class="text-sm text-gray-400">0 BOME</p>
                         </div>
                     </div>
-                    <p class="text-green-500">$550 (+5.12%)</p>
+                    <p class="text-green-500">$0.00 (+5.12%)</p>
                 </div>
 
                 <div class="flex justify-between py-2">
@@ -292,10 +292,10 @@
                         <img src="https://cryptologos.cc/logos/shiba-inu-shib-logo.png" alt="Shiba" class="w-6 h-6">
                         <div>
                             <p>Shiba</p>
-                            <p class="text-sm text-gray-400">300 SHIB</p>
+                            <p class="text-sm text-gray-400">0 SHIB</p>
                         </div>
                     </div>
-                    <p class="text-green-500">$1.5k (+8.32%)</p>
+                    <p class="text-green-500">$0.00 (+8.32%)</p>
                 </div>
 
                 <div class="flex justify-between py-2">
@@ -303,10 +303,10 @@
                         <img src="https://cryptologos.cc/logos/chainlink-link-logo.png" alt="Chainlink" class="w-6 h-6">
                         <div>
                             <p>Chainlink</p>
-                            <p class="text-sm text-gray-400">100 LINK</p>
+                            <p class="text-sm text-gray-400">0 LINK</p>
                         </div>
                     </div>
-                    <p class="text-red-500">$350 (-1.92%)</p>
+                    <p class="text-red-500">$0.00 (+1.92%)</p>
                 </div>
 
                 <div class="flex justify-between py-2">
@@ -314,10 +314,10 @@
                         <img src="https://cryptologos.cc/logos/litecoin-ltc-logo.png" alt="Litecoin" class="w-6 h-6">
                         <div>
                             <p>Litecoin</p>
-                            <p class="text-sm text-gray-400">50 LTC</p>
+                            <p class="text-sm text-gray-400">0.00 LTC</p>
                         </div>
                     </div>
-                    <p class="text-green-500">$4k (+3.58%)</p>
+                    <p class="text-green-500">$0.00 (+3.58%)</p>
                 </div>
 
             </div>
@@ -333,27 +333,27 @@
                 <span class="text-xs">Investing</span>
             </a>
             <!-- Mines Gambling -->
-            <a href="mines.html" class="flex flex-col items-center text-gray-600 hover:text-blue-500">
+            <a href="mines.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
                 <i class="fas fa-bomb text-xl"></i> <!-- Icon of a bomb to represent Mines Gambling -->
                 <span class="text-xs">Mines</span>
             </a>
             <!-- Earnings -->
-            <a href="dashboard.html" class="flex flex-col items-center text-gray-600 hover:text-blue-500">
+            <a href="dashboard.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
                 <i class="fas fa-dollar-sign text-xl"></i>
                 <span class="text-xs">Earnings</span>
             </a>
             <!-- Gambling -->
-            <a href="crash-game.html" class="flex flex-col items-center text-gray-600 hover:text-blue-500">
+            <a href="crash-game.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
                 <i class="fas fa-chart-line text-xl"></i>
                 <span class="text-xs">Gambling</span>
             </a>
             <!-- Limbo -->
-            <a href="limbo.html" class="flex flex-col items-center text-gray-600 hover:text-blue-500">
+            <a href="limbo.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
                 <i class="fas fa-arrow-up text-xl"></i> <!-- Arrow up icon -->
                 <span class="text-xs">Limbo</span>
             </a>
             <!-- Profile -->
-            <a href="profile.html" class="flex flex-col items-center text-gray-600 hover:text-blue-500">
+            <a href="profile.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
                 <i class="fas fa-user text-xl"></i>
                 <span class="text-xs">Profile</span>
             </a>
