--- a/mines.html
+++ b/mines.html
@@ -74,7 +74,7 @@
     <footer class="bg-white shadow-inner w-full fixed bottom-0">
         <div class="flex justify-around py-2 border-t">
             <!-- Investing -->
-            <a href="investing.html" class="flex flex-col items-center text-gray-600 hover:text-blue-500">
+            <a href="investing.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
                 <i class="fas fa-chart-line text-xl"></i>
                 <span class="text-xs">Investing</span>
             </a>
@@ -85,22 +85,22 @@
             </a>
 
             <!-- Earnings -->
-            <a href="dashboard.html" class="flex flex-col items-center text-gray-600 hover:text-blue-500">
+            <a href="dashboard.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
                 <i class="fas fa-dollar-sign text-xl"></i>
                 <span class="text-xs">Earnings</span>
             </a>
             <!-- Gambling -->
-            <a href="crash-game.html" class="flex flex-col items-center text-gray-600 hover:text-blue-500">
+            <a href="crash-game.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
                 <i class="fas fa-chart-line text-xl"></i>
                 <span class="text-xs">Gambling</span>
             </a>
             <!-- Limbo -->
-            <a href="limbo.html" class="flex flex-col items-center text-gray-600 hover:text-blue-500">
+            <a href="limbo.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
                 <i class="fas fa-arrow-up text-xl"></i> <!-- Arrow up icon -->
                 <span class="text-xs">Limbo</span>
             </a>
             <!-- Profile -->
-            <a href="profile.html" class="flex flex-col items-center text-gray-600 hover:text-blue-500">
+            <a href="profile.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
                 <i class="fas fa-user text-xl"></i>
                 <span class="text-xs">Profile</span>
             </a>
