--- a/myshares.html
+++ b/myshares.html
@@ -25,11 +25,11 @@
                 <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Apple" class="h-10 w-10 rounded-full">
                 <div class="ml-4">
                     <p class="font-medium">Apple Inc.</p>
-                    <p class="text-sm text-gray-500">Available</p>
+                    <p class="text-sm text-gray-500">Not Available</p>
                 </div>
             </div>
             <div class="text-right">
-                <p class="font-medium">$145.09</p>
+                <p class="font-medium">$0.00</p>
                 <p class="text-green-500 text-sm">+ $1.02 (0.71%)</p>
             </div>
         </div>
@@ -41,11 +41,11 @@
                 <img src="https://upload.wikimedia.org/wikipedia/commons/b/bb/Tesla_T_symbol.svg" alt="Tesla" class="h-10 w-10 rounded-full">
                 <div class="ml-4">
                     <p class="font-medium">Tesla Inc.</p>
-                    <p class="text-sm text-gray-500">Available</p>
+                    <p class="text-sm text-gray-500">Not Available</p>
                 </div>
             </div>
             <div class="text-right">
-                <p class="font-medium">$759.63</p>
+                <p class="font-medium">$0.00</p>
                 <p class="text-green-500 text-sm">+ $5.73 (0.76%)</p>
             </div>
         </div>
