--- a/dashboard.html
+++ b/dashboard.html
@@ -111,7 +111,7 @@
 <body class="bg-gray-100">
     <div class="mobile-only">
         <!-- Navbar -->
-        <div class="bg-blue-600 py-4 px-6 flex items-center justify-between rounded-b-lg fixed top-0 w-full z-50">
+        <div class="bg-black-600 py-4 px-6 flex items-center justify-between rounded-b-lg fixed top-0 w-full z-50">
             <div class="flex items-center space-x-4">
                 <button data-popover-target="popover-user-profile" class="w-12 h-12 bg-white rounded-full flex items-center justify-center shadow-md">
                     <i class="fas fa-user text-blue-600 text-xl"></i>
