--- a/dashboard.html
+++ b/dashboard.html
@@ -111,7 +111,7 @@
 <body class="bg-gray-100">
     <div class="mobile-only">
         <!-- Navbar -->
-        <div class="bg-black-600 py-4 px-6 flex items-center justify-between rounded-b-lg fixed top-0 w-full z-50">
+        <div class="bg-blue-600 py-4 px-6 flex items-center justify-between rounded-b-lg fixed top-0 w-full z-50">
             <div class="flex items-center space-x-4">
                 <button data-popover-target="popover-user-profile" class="w-12 h-12 bg-white rounded-full flex items-center justify-center shadow-md">
                     <i class="fas fa-user text-blue-600 text-xl"></i>
@@ -168,7 +168,7 @@
             <div class="relative">
                 <!-- Navbar (Background) -->
                 <div
-                    class="bg-black-600 py-4 px-6 flex items-center justify-between shadow-lg absolute w-full top-0 h-[50%] z-0 -mt-[10px]">
+                    class="bg-blue-600 py-4 px-6 flex items-center justify-between shadow-lg absolute w-full top-0 h-[50%] z-0 -mt-[10px]">
                 </div>
 
                 <!-- Main Content (Cards) -->
@@ -211,7 +211,7 @@
                     </div>
 
                     <!-- New Crypto Card (Attached Directly) -->
-                    <a href="history.html"
+                    <a href="#"
                         class="bg-yellow-400 rounded-b-lg p-4 flex items-center justify-between -mt-[5px]">
                         <p class=" text-black font-bold text-[15px]">Check transaction history.</p>
                         <i class="fas fa-angle-right"></i>
@@ -245,8 +245,8 @@
             <table class="w-full">
                 <thead>
                     <tr class="text-left text-gray-500 border-b">
-                        <th class="p-2">Kode</th>
-                        <th class="p-2">Performa Hari Ini</th>
+                        <th class="p-2">Coins</th>
+                        <th class="p-2">Performance stats</th>
                     </tr>
                 </thead>
                 <tbody>
