--- a/tasks.html
+++ b/tasks.html
@@ -156,7 +156,43 @@
                 </div>
             </div>
             <!-- recent transaction -->
-            
+            <!-- Sticky Footer -->
+    <footer class="bg-white shadow-inner w-full fixed bottom-0">
+        <div class="flex justify-around py-2 border-t">
+            <!-- Investing -->
+            <a href="investing.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
+                <i class="fas fa-chart-line text-xl"></i>
+                <span class="text-xs">Investing</span>
+            </a>
+            <!-- Mines Gambling -->
+            <a href="#mines-gambling" class="flex flex-col items-center text-black-600 hover:text-blue-500">
+                <i class="fas fa-bomb text-xl"></i> <!-- Icon of a bomb to represent Mines Gambling -->
+                <span class="text-xs">Mines</span>
+            </a>
+
+            <!-- Earnings -->
+            <a href="dashboard.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
+                <i class="fas fa-dollar-sign text-xl"></i>
+                <span class="text-xs">Earnings</span>
+            </a>
+            <!-- Tasks -->
+            <a href="tasks.html" class="flex flex-col items-center text-blue-600 hover:text-blue-500">
+                <i class="fas fa-task text-xl"></i>
+                <span class="text-xs">tasks</span>
+            </a>
+            <!-- Limbo -->
+            <a href="limbo.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
+                <i class="fas fa-arrow-up text-xl"></i> <!-- Arrow up icon -->
+                <span class="text-xs">Limbo</span>
+            </a>
+
+            <!-- Profile -->
+            <a href="profile.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
+                <i class="fas fa-user text-xl"></i>
+                <span class="text-xs">Profile</span>
+            </a>
+        </div>
+    </footer>
 
 
             </div>
