--- a/tasks.html
+++ b/tasks.html
@@ -94,7 +94,7 @@
                 </div>
                  <!-- investment var -->
                 <div class="investment">
-                    <img src="img/tesla.png" alt="inv2">
+                    <img src="img/twitter-logo.png" alt="inv2">
                     <h4>Follow UNIV on X</h4>
                     <div class="date-time">
                         <p></p>
@@ -110,7 +110,7 @@
                     </div>
                 </div>
                 <div class="investment">
-                    <img src="img/mcdonalds.png" alt="inv4">
+                    <img src="img/Binance.png" alt="inv4">
                     <h4>Follow BINANCE on X</h4>
                     <div class="date-time">
                         <p></p>
@@ -126,7 +126,7 @@
                     </div>
                 </div>
                 <div class="investment">
-                    <img src="img/uniliver.png" alt="inv1">
+                    <img src="img/Telegram logo.png" alt="inv1">
                     <h4>Join UNIV Telegram Channel</h4>
                     <div class="date-time">
                         <p></p>
@@ -142,7 +142,7 @@
                     </div>
                 </div>
                 <div class="investment">
-                    <img src="img/monster.png" alt="inv3">
+                    <img src="img/bitget.png" alt="inv3">
                     <h4>Follow BITGET on X</h4>
                     <div class="date-time">
                         <p></p>
@@ -157,6 +157,23 @@
                         <small class="success">+0.30%</small>
                     </div>
                 </div>
+                <div class="investment">
+                    <img src="img/invite.jpeg" alt="inv3">
+                    <h4>Invite 5 Friends</h4>
+                    <div class="date-time">
+                        <p></p>
+                        <small class="text-muted"></small>
+                    </div>
+                    <div class="bonds">
+                        <p></p>
+                        <small class="text-muted"></small>
+                    </div>
+                    <div class="amount">
+                        <h4>$0.50 usdt</h4>
+                        <small class="success">+0.30%</small>
+                    </div>
+                </div>
+                
             </div>
             <!-- recent transaction -->
             <!-- Sticky Footer -->
