--- a/dashboard.html
+++ b/dashboard.html
@@ -133,7 +133,7 @@
                     </div>
                 </div>
                 <p class="text-base font-semibold leading-none text-gray-900 dark:text-white">
-                    <a href="#">Raihan Hariyanto</a>
+                    <a href="#">Univ Miner</a>
                     <!-- if Admin Will Verifed -->
                     <span class="inline-flex items-center justify-center w-6 h-6 me-2 text-sm font-semibold text-blue-800 bg-blue-100 rounded-full dark:bg-gray-700 dark:text-blue-400">
                         <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
@@ -142,9 +142,9 @@
                     </svg>
                 </p>
                 <p class="mb-3 text-sm font-normal">
-                    <a href="#" class="hover:underline">TPR87263472634</a>
+                    <a href="#" class="hover:underline">ED180325</a>
                 </p>
-                <p class="mb-4 text-sm">its your account, your role is <a href="" class="text-blue-600 hover:underline">Admin</a></a>.</p>
+                <p class="mb-4 text-sm">its your account, your role is <a href="" class="text-blue-600 hover:underline">User</a></a>.</p>
                 <ul class="flex text-sm">
                     <li class="me-2">
                         <a href="#" class="hover:underline">
@@ -311,10 +311,10 @@
                     <i class="fas fa-dollar-sign text-xl"></i>
                     <span class="text-xs">Earnings</span>
                 </a>
-                <!-- Gambling -->
-                <a href="crash-game.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
+                <!-- Tasks -->
+                <a href="tasks.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
                     <i class="fas fa-chart-line text-xl"></i>
-                    <span class="text-xs">Gambling</span>
+                    <span class="text-xs">Tasks</span>
                 </a>
                 <!-- Limbo -->
                 <a href="limbo.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
