--- a/investing.html
+++ b/investing.html
@@ -342,10 +342,10 @@
                 <i class="fas fa-dollar-sign text-xl"></i>
                 <span class="text-xs">Earnings</span>
             </a>
-            <!-- Gambling -->
-            <a href="crash-game.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
+            <!-- Tasks -->
+            <a href="tasks.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
                 <i class="fas fa-chart-line text-xl"></i>
-                <span class="text-xs">Gambling</span>
+                <span class="text-xs">Tasks</span>
             </a>
             <!-- Limbo -->
             <a href="limbo.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
