--- a/tasks.html
+++ b/tasks.html
@@ -197,7 +197,7 @@
             </a>
             <!-- Tasks -->
             <a href="tasks.html" class="flex flex-col items-center text-blue-600 hover:text-blue-500">
-                <i class="fas fa-task text-xl"></i>
+                <i class="fas fa-chart-line text-xl"></i>
                 <span class="text-xs">tasks</span>
             </a>
             <!-- Limbo -->
