--- a/news.html
+++ b/news.html
@@ -174,8 +174,8 @@
                     <span class="text-xs">Limbo</span>
                 </a>
                 <!-- News -->
-                <a href="news.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
-                    <i class="fas fa-user text-xl"></i>
+                <a href="news.html" class="flex flex-col items-center text-blue-600 hover:text-blue-500">
+                    <i class="fa fa-newspaper-o" aria-hidden="true"></i>
                     <span class="text-xs">News</span>
                 </a>
             </div>
