--- a/news.html
+++ b/news.html
@@ -168,10 +168,10 @@
                     <i class="fas fa-chart-line text-xl"></i>
                     <span class="text-xs">Tasks</span>
                 </a>
-                <!-- Limbo -->
-                <a href="limbo.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
-                    <i class="fas fa-arrow-up text-xl"></i> <!-- Arrow up icon -->
-                    <span class="text-xs">Limbo</span>
+                <!-- Friends -->
+                <a href="friends.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
+                   <i class="fa fa-user-plus" aria-hidden="true"></i> <!-- Arrow up icon -->
+                    <span class="text-xs">Friends</span>
                 </a>
                 <!-- News -->
                 <a href="news.html" class="flex flex-col items-center text-blue-600 hover:text-blue-500">
