--- a/news.html
+++ b/news.html
@@ -120,8 +120,8 @@
   "feedMode": "all_symbols",
   "isTransparent": false,
   "displayMode": "regular",
-  "width": 400,
-  "height": 550,
+  "width": 370,
+  "height": 750,
   "colorTheme": "light",
   "locale": "en"
 }
@@ -170,12 +170,12 @@
                 </a>
                 <!-- Friends -->
                 <a href="friends.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
-                   <i class="fa fa-user-plus" aria-hidden="true"></i> <!-- Arrow up icon -->
+                   <i class="fas fa-user-friends"></i> <!-- Arrow up icon -->
                     <span class="text-xs">Friends</span>
                 </a>
                 <!-- News -->
                 <a href="news.html" class="flex flex-col items-center text-blue-600 hover:text-blue-500">
-                    <i class="fa fa-newspaper-o" aria-hidden="true"></i>
+                    <i class="fas fa-newspaper"></i>
                     <span class="text-xs">News</span>
                 </a>
             </div>
