--- a/tasks.html
+++ b/tasks.html
@@ -187,7 +187,7 @@
             <!-- recent transaction -->
 		 <div class="container py-4">
 	
-		<div class="ss-box ss-pill ss-shadow"></div>
+		<div class="ss-btn ss-pill ss-shadow"></div>
 		
 		<script>			
 
